[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Obstacle/Obstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScoreLabel.cs" type="Script" id=4]
[ext_resource path="res://RetryButton.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="Theme" id=4]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )
obstacle_scene = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 30, 0, 0, 0, 2, 0, 0, 0, 30, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8 )
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 20, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
speed = 10

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13, 22.4581 )

[node name="ObtacleTimer" type="Timer" parent="."]
autostart = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )

[node name="ScoreLabel" type="Label" parent="UI"]
margin_right = 165.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0.180392, 0.152941, 0.152941, 1 )
text = "Score: 0"
script = ExtResource( 4 )

[node name="Retry" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.427451 )

[node name="Button" type="Button" parent="UI/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -48.5
margin_right = 109.0
margin_bottom = 48.5
text = "Retry"
script = ExtResource( 5 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="hit" from="Player" to="UI/ScoreLabel" method="_on_Player_hit"]
[connection signal="timeout" from="ObtacleTimer" to="." method="_on_ObtacleTimer_timeout"]
